Fix image-not-found issue on Firefox
Remove unused filter CSS

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
   display: inline-block;
   text-align: center;
 }
-.my-gallery img {
+.my-gallery div {
   object-fit: cover;
   image-orientation: from-image;
 }
@@ -31,30 +31,4 @@ body {
   margin-left: 20px;
   margin-right: 20px;
   font-size: 2em;
-}
-
-.filters {
-  display: inline-block;
-  margin-bottom: 10px;
-}
-.filters img {
-  display: inline-block;
-  height: 36px;
-  width: 36px;
-}
-.filters svg {
-  display: inline-block;
-  margin-top: 20px;
-  height: 36px;
-  width: 36px;
-}
-
-.filters svg.active {
-  fill: #78B9EF !important;
-}
-.filters img.active text{
-  fill: #78B9EF !important;
-}
-.filters img.active path{
-  fill: #78B9EF !important;
 }
